app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
  namespace: lab01
spec:
  selector:
    matchLabels:
      app: web
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: 'gcr.io/google-samples/hello-app:1.0'
          imagePullPolicy: IfNotPresent
          name: hello-app
          ports:
            - containerPort: 8080
              name: custom-http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: custom-http
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
      restartPolicy: Always
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app: web
          maxSkew: 1
          topologyKey: zone
          whenUnsatisfiable: DoNotSchedule
