app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
  namespace: lab01
spec:
  externalTrafficPolicy: Cluster
  ports:
    - port: 8080
      protocol: TCP
      targetPort: custom-http
  selector:
    app: web
  sessionAffinity: None
  type: NodePort
